--- a/sound-preview.html
+++ b/sound-preview.html
@@ -1,86 +1,158 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rebuy Sound Options</title>
+    <title>Casino Style Sounds</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #1a1a2e;
+            background: linear-gradient(135deg, #1a1a2e 0%, #0f3460 100%);
             color: white;
             padding: 40px;
+            min-height: 100vh;
         }
         .sound-option {
-            background: #16213e;
+            background: rgba(255,255,255,0.1);
             padding: 20px;
             margin: 15px 0;
             border-radius: 10px;
             display: flex;
             align-items: center;
             gap: 20px;
+            border: 1px solid rgba(255,215,0,0.3);
         }
         .sound-option h3 {
             margin: 0;
-            min-width: 200px;
+            min-width: 280px;
+            color: #ffd700;
+        }
+        .sound-option p {
+            margin: 5px 0 0 0;
+            color: #aaa;
+            font-size: 14px;
         }
         button {
-            background: #e94560;
-            color: white;
+            background: linear-gradient(135deg, #ffd700 0%, #ff8c00 100%);
+            color: #1a1a2e;
             border: none;
             padding: 15px 30px;
             border-radius: 8px;
             cursor: pointer;
             font-size: 16px;
+            font-weight: bold;
+            min-width: 100px;
         }
         button:hover {
-            background: #ff6b6b;
+            transform: scale(1.05);
         }
         h1 {
-            color: #e94560;
+            color: #ffd700;
+            text-align: center;
+        }
+        .info {
+            display: flex;
+            flex-direction: column;
+            flex: 1;
         }
     </style>
 </head>
 <body>
-    <h1>🎰 Choose a Rebuy Sound</h1>
-    <p>Click the Play button next to each option to hear it:</p>
+    <h1>🎰 Casino Style Rebuy Sounds 🎲</h1>
+    <p style="text-align:center">Click Play to hear each casino sound:</p>
 
     <div class="sound-option">
-        <h3>Option 1: Coin Clink</h3>
-        <button onclick="play('https://assets.mixkit.co/active_storage/sfx/2003/2003-preview.mp3')">▶ Play</button>
+        <div class="info">
+            <h3>Option 1: Slot Machine Spin</h3>
+            <p>Classic slot machine spinning</p>
+        </div>
+        <button onclick="play('https://www.soundjay.com/misc/sounds/slot-machine-spin-1.mp3')">▶ Play</button>
     </div>
 
     <div class="sound-option">
-        <h3>Option 2: Cash Register</h3>
-        <button onclick="play('https://assets.mixkit.co/active_storage/sfx/1989/1989-preview.mp3')">▶ Play</button>
+        <div class="info">
+            <h3>Option 2: Slot Machine Win</h3>
+            <p>Big casino jackpot win</p>
+        </div>
+        <button onclick="play('https://www.soundjay.com/misc/sounds/slot-machine-win-1.mp3')">▶ Play</button>
     </div>
 
     <div class="sound-option">
-        <h3>Option 3: Arcade Complete</h3>
-        <button onclick="play('https://assets.mixkit.co/active_storage/sfx/270/270-preview.mp3')">▶ Play</button>
+        <div class="info">
+            <h3>Option 3: Slot Machine Win 2</h3>
+            <p>Another jackpot variation</p>
+        </div>
+        <button onclick="play('https://www.soundjay.com/misc/sounds/slot-machine-win-2.mp3')">▶ Play</button>
     </div>
 
     <div class="sound-option">
-        <h3>Option 4: Positive Notification</h3>
-        <button onclick="play('https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3')">▶ Play</button>
+        <div class="info">
+            <h3>Option 4: Casino Chips 1</h3>
+            <p>Chips being pushed across table</p>
+        </div>
+        <button onclick="play('https://www.soundjay.com/misc/sounds/casino-chips-1.mp3')">▶ Play</button>
     </div>
 
     <div class="sound-option">
-        <h3>Option 5: Video Game Coin</h3>
-        <button onclick="play('https://assets.mixkit.co/active_storage/sfx/888/888-preview.mp3')">▶ Play</button>
+        <div class="info">
+            <h3>Option 5: Casino Chips 2</h3>
+            <p>Chips stacking sound</p>
+        </div>
+        <button onclick="play('https://www.soundjay.com/misc/sounds/casino-chips-2.mp3')">▶ Play</button>
     </div>
 
     <div class="sound-option">
-        <h3>Option 6: Simple Ding</h3>
-        <button onclick="play('https://assets.mixkit.co/active_storage/sfx/2571/2571-preview.mp3')">▶ Play</button>
+        <div class="info">
+            <h3>Option 6: Casino Chips 3</h3>
+            <p>Heavy chip drop</p>
+        </div>
+        <button onclick="play('https://www.soundjay.com/misc/sounds/casino-chips-3.mp3')">▶ Play</button>
     </div>
 
     <div class="sound-option">
-        <h3>Option 7: Success Bell</h3>
-        <button onclick="play('https://assets.mixkit.co/active_storage/sfx/2000/2000-preview.mp3')">▶ Play</button>
+        <div class="info">
+            <h3>Option 7: Roulette Ball Spin</h3>
+            <p>Roulette wheel spinning</p>
+        </div>
+        <button onclick="play('https://www.soundjay.com/misc/sounds/roulette-wheel-1.mp3')">▶ Play</button>
     </div>
 
     <div class="sound-option">
-        <h3>Option 8: Slot Machine Win</h3>
-        <button onclick="play('https://assets.mixkit.co/active_storage/sfx/146/146-preview.mp3')">▶ Play</button>
+        <div class="info">
+            <h3>Option 8: Cards Shuffle</h3>
+            <p>Dealer shuffling cards</p>
+        </div>
+        <button onclick="play('https://www.soundjay.com/misc/sounds/playing-cards-shuffling-1.mp3')">▶ Play</button>
+    </div>
+
+    <div class="sound-option">
+        <div class="info">
+            <h3>Option 9: Card Deal</h3>
+            <p>Single card being dealt</p>
+        </div>
+        <button onclick="play('https://www.soundjay.com/misc/sounds/playing-card-dealt-1.mp3')">▶ Play</button>
+    </div>
+
+    <div class="sound-option">
+        <div class="info">
+            <h3>Option 10: Dice Roll</h3>
+            <p>Casino dice rolling</p>
+        </div>
+        <button onclick="play('https://www.soundjay.com/misc/sounds/dice-roll-1.mp3')">▶ Play</button>
+    </div>
+
+    <div class="sound-option">
+        <div class="info">
+            <h3>Option 11: Cash Register</h3>
+            <p>Money/buy-in transaction</p>
+        </div>
+        <button onclick="play('https://www.soundjay.com/misc/sounds/cash-register-1.mp3')">▶ Play</button>
+    </div>
+
+    <div class="sound-option">
+        <div class="info">
+            <h3>Option 12: Coins Drop</h3>
+            <p>Coins/chips falling</p>
+        </div>
+        <button onclick="play('https://www.soundjay.com/misc/sounds/coins-drop-1.mp3')">▶ Play</button>
     </div>
 
     <script>
@@ -90,9 +162,10 @@
                 currentAudio.pause();
             }
             currentAudio = new Audio(url);
-            currentAudio.play();
+            currentAudio.play().catch(e => {
+                alert('Could not play: ' + url);
+            });
         }
     </script>
 </body>
 </html>
-
