--- a/sound-preview.html
+++ b/sound-preview.html
@@ -1,170 +1,410 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Casino Style Sounds</title>
+    <title>Casino Rebuy Sounds - 20 Options</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(135deg, #1a1a2e 0%, #0f3460 100%);
+            background: linear-gradient(135deg, #0a0a15 0%, #1a0a2e 50%, #0a1a2e 100%);
             color: white;
-            padding: 40px;
+            padding: 30px;
             min-height: 100vh;
         }
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            gap: 15px;
+        }
         .sound-option {
-            background: rgba(255,255,255,0.1);
-            padding: 20px;
-            margin: 15px 0;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            border: 1px solid rgba(255,215,0,0.3);
+            background: linear-gradient(135deg, rgba(255,215,0,0.1) 0%, rgba(255,100,0,0.05) 100%);
+            padding: 18px;
+            border-radius: 12px;
+            border: 1px solid rgba(255,215,0,0.2);
+            transition: all 0.2s;
+        }
+        .sound-option:hover {
+            border-color: rgba(255,215,0,0.5);
+            transform: translateY(-2px);
         }
         .sound-option h3 {
-            margin: 0;
-            min-width: 280px;
+            margin: 0 0 8px 0;
             color: #ffd700;
+            font-size: 16px;
         }
         .sound-option p {
-            margin: 5px 0 0 0;
-            color: #aaa;
-            font-size: 14px;
+            margin: 0 0 12px 0;
+            color: #888;
+            font-size: 13px;
         }
         button {
             background: linear-gradient(135deg, #ffd700 0%, #ff8c00 100%);
             color: #1a1a2e;
             border: none;
-            padding: 15px 30px;
+            padding: 12px 24px;
             border-radius: 8px;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 14px;
             font-weight: bold;
-            min-width: 100px;
+            width: 100%;
         }
         button:hover {
-            transform: scale(1.05);
+            filter: brightness(1.1);
         }
         h1 {
             color: #ffd700;
             text-align: center;
+            margin-bottom: 10px;
         }
-        .info {
-            display: flex;
-            flex-direction: column;
-            flex: 1;
+        .subtitle {
+            text-align: center;
+            color: #888;
+            margin-bottom: 30px;
         }
     </style>
 </head>
 <body>
-    <h1>🎰 Casino Style Rebuy Sounds 🎲</h1>
-    <p style="text-align:center">Click Play to hear each casino sound:</p>
+    <h1>🎰 Casino Rebuy Sounds 🎲</h1>
+    <p class="subtitle">20 Premium Options - Click to preview</p>
 
-    <div class="sound-option">
-        <div class="info">
-            <h3>Option 1: Slot Machine Spin</h3>
-            <p>Classic slot machine spinning</p>
+    <div class="grid">
+        <div class="sound-option">
+            <h3>1. Vegas Jackpot</h3>
+            <p>Classic slot machine big win</p>
+            <button onclick="play1()">▶ Play</button>
         </div>
-        <button onclick="play('https://www.soundjay.com/misc/sounds/slot-machine-spin-1.mp3')">▶ Play</button>
-    </div>
 
-    <div class="sound-option">
-        <div class="info">
-            <h3>Option 2: Slot Machine Win</h3>
-            <p>Big casino jackpot win</p>
+        <div class="sound-option">
+            <h3>2. Chips Cascade</h3>
+            <p>Pile of chips falling</p>
+            <button onclick="play2()">▶ Play</button>
         </div>
-        <button onclick="play('https://www.soundjay.com/misc/sounds/slot-machine-win-1.mp3')">▶ Play</button>
-    </div>
 
-    <div class="sound-option">
-        <div class="info">
-            <h3>Option 3: Slot Machine Win 2</h3>
-            <p>Another jackpot variation</p>
+        <div class="sound-option">
+            <h3>3. Royal Flush</h3>
+            <p>Majestic winning fanfare</p>
+            <button onclick="play3()">▶ Play</button>
         </div>
-        <button onclick="play('https://www.soundjay.com/misc/sounds/slot-machine-win-2.mp3')">▶ Play</button>
-    </div>
 
-    <div class="sound-option">
-        <div class="info">
-            <h3>Option 4: Casino Chips 1</h3>
-            <p>Chips being pushed across table</p>
+        <div class="sound-option">
+            <h3>4. Cash In</h3>
+            <p>Money drawer opening</p>
+            <button onclick="play4()">▶ Play</button>
         </div>
-        <button onclick="play('https://www.soundjay.com/misc/sounds/casino-chips-1.mp3')">▶ Play</button>
-    </div>
 
-    <div class="sound-option">
-        <div class="info">
-            <h3>Option 5: Casino Chips 2</h3>
-            <p>Chips stacking sound</p>
+        <div class="sound-option">
+            <h3>5. High Roller</h3>
+            <p>VIP entrance sound</p>
+            <button onclick="play5()">▶ Play</button>
         </div>
-        <button onclick="play('https://www.soundjay.com/misc/sounds/casino-chips-2.mp3')">▶ Play</button>
-    </div>
 
-    <div class="sound-option">
-        <div class="info">
-            <h3>Option 6: Casino Chips 3</h3>
-            <p>Heavy chip drop</p>
+        <div class="sound-option">
+            <h3>6. Double Down</h3>
+            <p>Exciting betting sound</p>
+            <button onclick="play6()">▶ Play</button>
         </div>
-        <button onclick="play('https://www.soundjay.com/misc/sounds/casino-chips-3.mp3')">▶ Play</button>
-    </div>
 
-    <div class="sound-option">
-        <div class="info">
-            <h3>Option 7: Roulette Ball Spin</h3>
-            <p>Roulette wheel spinning</p>
+        <div class="sound-option">
+            <h3>7. Lucky Seven</h3>
+            <p>7-7-7 slot celebration</p>
+            <button onclick="play7()">▶ Play</button>
         </div>
-        <button onclick="play('https://www.soundjay.com/misc/sounds/roulette-wheel-1.mp3')">▶ Play</button>
-    </div>
 
-    <div class="sound-option">
-        <div class="info">
-            <h3>Option 8: Cards Shuffle</h3>
-            <p>Dealer shuffling cards</p>
+        <div class="sound-option">
+            <h3>8. All In</h3>
+            <p>Dramatic push sound</p>
+            <button onclick="play8()">▶ Play</button>
         </div>
-        <button onclick="play('https://www.soundjay.com/misc/sounds/playing-cards-shuffling-1.mp3')">▶ Play</button>
-    </div>
 
-    <div class="sound-option">
-        <div class="info">
-            <h3>Option 9: Card Deal</h3>
-            <p>Single card being dealt</p>
+        <div class="sound-option">
+            <h3>9. Poker Pro</h3>
+            <p>Professional chip handling</p>
+            <button onclick="play9()">▶ Play</button>
         </div>
-        <button onclick="play('https://www.soundjay.com/misc/sounds/playing-card-dealt-1.mp3')">▶ Play</button>
-    </div>
 
-    <div class="sound-option">
-        <div class="info">
-            <h3>Option 10: Dice Roll</h3>
-            <p>Casino dice rolling</p>
+        <div class="sound-option">
+            <h3>10. Money Rain</h3>
+            <p>Coins showering down</p>
+            <button onclick="play10()">▶ Play</button>
         </div>
-        <button onclick="play('https://www.soundjay.com/misc/sounds/dice-roll-1.mp3')">▶ Play</button>
-    </div>
 
-    <div class="sound-option">
-        <div class="info">
-            <h3>Option 11: Cash Register</h3>
-            <p>Money/buy-in transaction</p>
+        <div class="sound-option">
+            <h3>11. Casino Bell</h3>
+            <p>Classic winner bell</p>
+            <button onclick="play11()">▶ Play</button>
         </div>
-        <button onclick="play('https://www.soundjay.com/misc/sounds/cash-register-1.mp3')">▶ Play</button>
-    </div>
 
-    <div class="sound-option">
-        <div class="info">
-            <h3>Option 12: Coins Drop</h3>
-            <p>Coins/chips falling</p>
+        <div class="sound-option">
+            <h3>12. Buy In Chime</h3>
+            <p>Clean transaction complete</p>
+            <button onclick="play12()">▶ Play</button>
         </div>
-        <button onclick="play('https://www.soundjay.com/misc/sounds/coins-drop-1.mp3')">▶ Play</button>
+
+        <div class="sound-option">
+            <h3>13. Roulette Winner</h3>
+            <p>Ball landing celebration</p>
+            <button onclick="play13()">▶ Play</button>
+        </div>
+
+        <div class="sound-option">
+            <h3>14. Blackjack</h3>
+            <p>21! Quick win sound</p>
+            <button onclick="play14()">▶ Play</button>
+        </div>
+
+        <div class="sound-option">
+            <h3>15. Chip Stack</h3>
+            <p>Neat chips stacking up</p>
+            <button onclick="play15()">▶ Play</button>
+        </div>
+
+        <div class="sound-option">
+            <h3>16. Back In Game</h3>
+            <p>Player returns powerup</p>
+            <button onclick="play16()">▶ Play</button>
+        </div>
+
+        <div class="sound-option">
+            <h3>17. Golden Coin</h3>
+            <p>Premium coin drop</p>
+            <button onclick="play17()">▶ Play</button>
+        </div>
+
+        <div class="sound-option">
+            <h3>18. Winner Ding</h3>
+            <p>Simple elegant notification</p>
+            <button onclick="play18()">▶ Play</button>
+        </div>
+
+        <div class="sound-option">
+            <h3>19. Pot Winner</h3>
+            <p>Taking the pot celebration</p>
+            <button onclick="play19()">▶ Play</button>
+        </div>
+
+        <div class="sound-option">
+            <h3>20. Rebuy Ready</h3>
+            <p>Fresh start confirmation</p>
+            <button onclick="play20()">▶ Play</button>
+        </div>
     </div>
 
     <script>
-        let currentAudio = null;
-        function play(url) {
-            if (currentAudio) {
-                currentAudio.pause();
+        const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+
+        function tone(freq, start, dur, type = 'sine', vol = 0.2, decay = true) {
+            const osc = audioCtx.createOscillator();
+            const gain = audioCtx.createGain();
+            osc.type = type;
+            osc.frequency.value = freq;
+            gain.gain.setValueAtTime(vol, audioCtx.currentTime + start);
+            if (decay) {
+                gain.gain.exponentialRampToValueAtTime(0.001, audioCtx.currentTime + start + dur);
             }
-            currentAudio = new Audio(url);
-            currentAudio.play().catch(e => {
-                alert('Could not play: ' + url);
+            osc.connect(gain);
+            gain.connect(audioCtx.destination);
+            osc.start(audioCtx.currentTime + start);
+            osc.stop(audioCtx.currentTime + start + dur);
+        }
+
+        function noise(start, dur, vol = 0.15) {
+            const bufferSize = audioCtx.sampleRate * dur;
+            const buffer = audioCtx.createBuffer(1, bufferSize, audioCtx.sampleRate);
+            const data = buffer.getChannelData(0);
+            for (let i = 0; i < bufferSize; i++) {
+                data[i] = (Math.random() * 2 - 1) * Math.exp(-i / (bufferSize * 0.2));
+            }
+            const source = audioCtx.createBufferSource();
+            const gain = audioCtx.createGain();
+            source.buffer = buffer;
+            gain.gain.value = vol;
+            source.connect(gain);
+            gain.connect(audioCtx.destination);
+            source.start(audioCtx.currentTime + start);
+        }
+
+        function metallic(freq, start, dur, vol = 0.2) {
+            [1, 2.4, 4.5, 6.8].forEach((mult, i) => {
+                tone(freq * mult, start, dur * (1 - i * 0.2), 'sine', vol / (i + 1));
             });
+        }
+
+        // 1. Vegas Jackpot - exciting slot win
+        function play1() {
+            [523, 659, 784, 1047, 1319, 1568].forEach((f, i) => {
+                tone(f, i * 0.08, 0.4, 'square', 0.12);
+                tone(f * 1.5, i * 0.08, 0.3, 'sawtooth', 0.05);
+            });
+            for (let i = 0; i < 15; i++) noise(i * 0.05, 0.08, 0.1);
+        }
+
+        // 2. Chips Cascade - falling chips
+        function play2() {
+            for (let i = 0; i < 12; i++) {
+                const t = i * 0.07 + Math.random() * 0.03;
+                noise(t, 0.04, 0.25);
+                metallic(3000 + Math.random() * 2000, t, 0.06, 0.08);
+            }
+        }
+
+        // 3. Royal Flush - majestic fanfare
+        function play3() {
+            const notes = [392, 494, 587, 784, 988, 1175];
+            notes.forEach((f, i) => {
+                tone(f, i * 0.12, 0.5, 'triangle', 0.2);
+                tone(f * 0.5, i * 0.12, 0.5, 'triangle', 0.1);
+            });
+            tone(1568, 0.7, 0.8, 'triangle', 0.25);
+            tone(784, 0.7, 0.8, 'triangle', 0.15);
+        }
+
+        // 4. Cash In - drawer sound
+        function play4() {
+            noise(0, 0.1, 0.3);
+            tone(400, 0.05, 0.15, 'square', 0.15);
+            tone(600, 0.12, 0.1, 'square', 0.12);
+            metallic(2500, 0.15, 0.2, 0.15);
+            noise(0.2, 0.08, 0.2);
+        }
+
+        // 5. High Roller - VIP entrance
+        function play5() {
+            [262, 330, 392, 523].forEach((f, i) => {
+                tone(f, i * 0.15, 0.4, 'sine', 0.2);
+            });
+            tone(523, 0.6, 0.6, 'sine', 0.25);
+            tone(659, 0.6, 0.6, 'sine', 0.15);
+            tone(784, 0.6, 0.6, 'sine', 0.1);
+        }
+
+        // 6. Double Down - exciting bet
+        function play6() {
+            tone(300, 0, 0.1, 'square', 0.2);
+            tone(400, 0.1, 0.1, 'square', 0.2);
+            tone(600, 0.2, 0.15, 'sawtooth', 0.15);
+            tone(800, 0.3, 0.2, 'sawtooth', 0.15);
+            noise(0.35, 0.1, 0.15);
+        }
+
+        // 7. Lucky Seven - 777 celebration
+        function play7() {
+            for (let r = 0; r < 3; r++) {
+                const base = r * 0.25;
+                tone(880, base, 0.12, 'square', 0.15);
+                tone(1100, base + 0.06, 0.12, 'square', 0.15);
+                noise(base, 0.05, 0.1);
+            }
+            [1047, 1319, 1568].forEach((f, i) => tone(f, 0.8 + i * 0.1, 0.3, 'triangle', 0.2));
+        }
+
+        // 8. All In - dramatic push
+        function play8() {
+            tone(150, 0, 0.4, 'sawtooth', 0.15);
+            tone(200, 0.15, 0.35, 'sawtooth', 0.15);
+            for (let i = 0; i < 8; i++) noise(0.3 + i * 0.04, 0.06, 0.2);
+            tone(523, 0.5, 0.4, 'square', 0.15);
+            tone(659, 0.55, 0.35, 'square', 0.12);
+        }
+
+        // 9. Poker Pro - chip handling
+        function play9() {
+            for (let i = 0; i < 6; i++) {
+                const t = i * 0.1;
+                noise(t, 0.03, 0.2);
+                metallic(2000 + i * 200, t + 0.02, 0.05, 0.1);
+            }
+        }
+
+        // 10. Money Rain - coins showering
+        function play10() {
+            for (let i = 0; i < 25; i++) {
+                const t = i * 0.04 + Math.random() * 0.02;
+                metallic(2500 + Math.random() * 1500, t, 0.08, 0.06);
+                if (i % 3 === 0) noise(t, 0.02, 0.08);
+            }
+        }
+
+        // 11. Casino Bell - winner bell
+        function play11() {
+            metallic(1200, 0, 0.5, 0.25);
+            metallic(1200, 0.4, 0.4, 0.2);
+            tone(1200, 0, 0.5, 'sine', 0.15);
+        }
+
+        // 12. Buy In Chime - clean transaction
+        function play12() {
+            tone(880, 0, 0.15, 'sine', 0.25);
+            tone(1100, 0.1, 0.15, 'sine', 0.25);
+            tone(1320, 0.2, 0.25, 'sine', 0.3);
+        }
+
+        // 13. Roulette Winner
+        function play13() {
+            for (let i = 0; i < 8; i++) {
+                tone(600 + i * 100, i * 0.06, 0.15, 'triangle', 0.12);
+            }
+            noise(0.5, 0.05, 0.2);
+            tone(1400, 0.55, 0.4, 'sine', 0.25);
+            tone(1050, 0.55, 0.4, 'sine', 0.15);
+        }
+
+        // 14. Blackjack 21
+        function play14() {
+            tone(660, 0, 0.1, 'square', 0.15);
+            tone(880, 0.1, 0.1, 'square', 0.15);
+            tone(1100, 0.2, 0.25, 'sine', 0.25);
+            noise(0.2, 0.03, 0.1);
+        }
+
+        // 15. Chip Stack - neat stacking
+        function play15() {
+            for (let i = 0; i < 5; i++) {
+                noise(i * 0.12, 0.04, 0.2);
+                metallic(2200, i * 0.12 + 0.02, 0.08, 0.1);
+            }
+            tone(800, 0.6, 0.2, 'sine', 0.15);
+        }
+
+        // 16. Back In Game - powerup
+        function play16() {
+            const notes = [262, 330, 392, 523, 659, 784, 1047];
+            notes.forEach((f, i) => {
+                tone(f, i * 0.06, 0.2, 'square', 0.1);
+            });
+            tone(1047, 0.45, 0.4, 'triangle', 0.2);
+            tone(1319, 0.45, 0.4, 'triangle', 0.15);
+        }
+
+        // 17. Golden Coin - premium drop
+        function play17() {
+            metallic(2800, 0, 0.3, 0.25);
+            noise(0, 0.03, 0.15);
+            metallic(2400, 0.15, 0.2, 0.15);
+            noise(0.15, 0.02, 0.1);
+            tone(880, 0.25, 0.2, 'sine', 0.1);
+        }
+
+        // 18. Winner Ding - elegant
+        function play18() {
+            metallic(1800, 0, 0.4, 0.2);
+            tone(1800, 0, 0.3, 'sine', 0.2);
+        }
+
+        // 19. Pot Winner - celebration
+        function play19() {
+            tone(523, 0, 0.15, 'triangle', 0.2);
+            tone(659, 0.12, 0.15, 'triangle', 0.2);
+            tone(784, 0.24, 0.15, 'triangle', 0.2);
+            tone(1047, 0.36, 0.3, 'triangle', 0.25);
+            for (let i = 0; i < 5; i++) noise(0.4 + i * 0.05, 0.04, 0.1);
+        }
+
+        // 20. Rebuy Ready - fresh start
+        function play20() {
+            tone(440, 0, 0.08, 'sine', 0.2);
+            tone(554, 0.08, 0.08, 'sine', 0.2);
+            tone(659, 0.16, 0.08, 'sine', 0.2);
+            tone(880, 0.24, 0.25, 'sine', 0.3);
+            metallic(2000, 0.35, 0.15, 0.1);
         }
     </script>
 </body>
